[package]
name = "hurl"
version = "0.1.0"
authors = ["Nick Calibey <nick.calibey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
heck = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
serde = "1.0"
serde_json = "1.0"
reqwest = "0.9.20"
rpassword = "4.0"
dirs = "2.0"
lazy_static = "1.4"
toml = "0.5"
syntect = "3.2"
